--- a/editor/sass/_metadata.scss
+++ b/editor/sass/_metadata.scss
@@ -61,7 +61,7 @@ $margin-items: .25em;
     }
 
     .content {
-        flex: 1 1 auto;
+        flex: 1 1 100%;
         padding-left: $indexWidth + $indexPadding;
         @supports (position: sticky)
         {
